objects/avoka__Transact_Post__c.object
<CustomObject>
    <description>Defines a request to push a form out to a known or anonymous user in Avoka Transact</description>
    <fields>
        <fullName>avoka__Address__c</fullName>
        <description>Physical address associated with the task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Physical address associated with the task.</inlineHelpText>
        <label>Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Allow_Claim_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The flag controlling whether the task is claimable exclusively by a single user (optional, only possible if the task is assigned to group(s)).</description>
        <inlineHelpText>The flag controlling whether the task is claimable exclusively by a single user (optional, only possible if the task is assigned to group(s)).</inlineHelpText>
        <label>Allow Claim Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avoka__Assign_Group__c</fullName>
        <description>The user to assign the task to (must be specified if group is not).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The user to assign the task to (must be specified if group is not).</inlineHelpText>
        <label>Assign Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Assign_User__c</fullName>
        <description>The user to assign the task to (must be specified if group is not).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The user to assign the task to (must be specified if group is not).</inlineHelpText>
        <label>Assign User</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Batch_Code__c</fullName>
        <description>Where a number of requests are sent together, this field can be used to group post request into a batch.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Where a number of requests are sent together, this field can be used to group post request into a batch.</inlineHelpText>
        <label>Batch Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Expiry_Timestamp__c</fullName>
        <description>Date and time that the task will expire (optional: needs to be in the future).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date and time that the task will expire (optional: needs to be in the future).</inlineHelpText>
        <label>Expiry Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Form_Code__c</fullName>
        <description>Unique form identifier in Avoka Transact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique form identifier in Avoka Transact.</inlineHelpText>
        <label>Form Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Latitude__c</fullName>
        <description>The latitude component of the geolocation information associated with the task (optional; can range from -90 to 90).</description>
        <inlineHelpText>The latitude component of the geolocation information associated with the task (optional; can range from -90 to 90).</inlineHelpText>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avoka__Linked_Sobject_Id__c</fullName>
        <description>Provide an Sobject Id for the SalesForce object to be associated with this submission in Avoka Transact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provide an Sobject Id for the SalesForce object to be associated with this submission in Avoka Transact.</inlineHelpText>
        <label>Linked Sobject Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Longitude__c</fullName>
        <description>The longitude component of the geolocation information associated with the task (optional; can range from -180 to 180).</description>
        <inlineHelpText>The longitude component of the geolocation information associated with the task (optional; can range from -180 to 180).</inlineHelpText>
        <label>Longitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avoka__Personal_Message__c</fullName>
        <description>Personal message to include in notification email (optional).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Personal message to include in notification email (optional).</inlineHelpText>
        <label>Personal Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Portal_Name__c</fullName>
        <description>Identifies the portal where anonymous assignments will be linked.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Identifies the portal where anonymous assignments will be linked.</inlineHelpText>
        <label>Portal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Prefill_Sobject_Id__c</fullName>
        <description>Specify the SObject Id of the object you wish to use for prefill and the prefill XML will automatically be generated for that object.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify the SObject Id of the object you wish to use for prefill and the prefill XML will automatically be generated for that object.</inlineHelpText>
        <label>Prefill Sobject Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Prefill_Xml__c</fullName>
        <description>XML data to prefill into the form (data will be mapped in Avoka Transact).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>XML data to prefill into the form (data will be mapped in Avoka Transact).</inlineHelpText>
        <label>Prefill Xml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Processed_Timestamp__c</fullName>
        <description>The date and time when the processing occurred.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date and time when the processing occurred.</inlineHelpText>
        <label>Processed Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Processing_Message__c</fullName>
        <description>Provides any message relevant to the processing.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provides any message relevant to the processing.</inlineHelpText>
        <label>Processing Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Processing_Response__c</fullName>
        <description>The data returned from Avoka Transact in the processing response.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The data returned from Avoka Transact in the processing response.</inlineHelpText>
        <label>Processing Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Processing_Status__c</fullName>
        <description>Current status of the processing of this post request with Avoka Transact.</description>
        <inlineHelpText>Current status of the processing of this post request with Avoka Transact.</inlineHelpText>
        <label>Processing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready</fullName>
                    <color>#DDDDDD</color>
                    <default>true</default>
                    <label>Ready</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#FFCC33</color>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Failed</fullName>
                    <color>#FF0000</color>
                    <label>Failed</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#33FF33</color>
                    <label>Complete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>avoka__Recipient_Email__c</fullName>
        <description>The email address for anonymous recipients, not used if Assign User or Assign Group is provided.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The email address for anonymous recipients, not used if Assign User or Assign Group is provided.</inlineHelpText>
        <label>Recipient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>avoka__Scheduled_Timestamp__c</fullName>
        <description>Date and time when the task is scheduled to be done, for calendar integration (optional).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date and time when the task is scheduled to be done, for calendar integration (optional).</inlineHelpText>
        <label>Scheduled Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>avoka__Send_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to instruct Avoka Transact whether to send a notification email to the recipient.</description>
        <inlineHelpText>Flag to instruct Avoka Transact whether to send a notification email to the recipient.</inlineHelpText>
        <label>Send Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>avoka__Sequence__c</fullName>
        <description>The sequence number that can be set to number tasks that are part of a set (optional).</description>
        <inlineHelpText>The sequence number that can be set to number tasks that are part of a set (optional).</inlineHelpText>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>avoka__Submission_Data__c</fullName>
        <description>Submission data from a prior submission that will be used to create the new task.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Submission data from a prior submission that will be used to create the new task.</inlineHelpText>
        <label>Submission Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Submission_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique key for the task in Avoka Transact (populated after successful task creation).</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique key for the task in Avoka Transact (populated after successful task creation).</inlineHelpText>
        <label>Submission Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>avoka__Submission_URL__c</fullName>
        <description>Provides a link to the submission record created in Avoka Transact.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Provides a link to the submission record created in Avoka Transact.</inlineHelpText>
        <label>Submission URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>avoka__Task_Description__c</fullName>
        <description>Descriptive text relating to the task to give the user additional context.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Descriptive text relating to the task to give the user additional context.</inlineHelpText>
        <label>Task Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>avoka__Task_Title__c</fullName>
        <description>Short display title for the user (relevant in scenarios where the task will appear in a list).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Short display title for the user (relevant in scenarios where the task will appear in a list).</inlineHelpText>
        <label>Task Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__Tracking_Code__c</fullName>
        <description>Unique reference code for the task in Avoka Transact (populated after successful task creation).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Unique reference code for the task in Avoka Transact (populated after successful task creation).</inlineHelpText>
        <label>Tracking Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>avoka__User_Deletable_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Instructs Avoka Transact whether to allow the assigned user to delete the task.</description>
        <inlineHelpText>Instructs Avoka Transact whether to allow the assigned user to delete the task.</inlineHelpText>
        <label>User Deletable Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Post Request</label>
    <listViews>
        <fullName>avoka__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>avoka__Tracking_Code__c</columns>
        <columns>avoka__Form_Code__c</columns>
        <columns>avoka__Assign_User__c</columns>
        <columns>avoka__Processing_Status__c</columns>
        <columns>avoka__Processing_Message__c</columns>
        <columns>avoka__Processed_Timestamp__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Post Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>